@@ -184,6 +184,9 @@ Release 2.6.1 - UNRELEASED
     YARN-3544. Got back AM logs link on the RM web UI for a completed app.
     (Xuan Gong via zjshen)
 
+    YARN-2890. MiniYarnCluster should turn on timeline service if
+    configured to do so. (Mit Desai via hitesh)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
